# raytracer

./: Cargo.toml  README.md  image.ppm
src/: camera.rs  colour.rs  dielectric.rs  hittable.rs  hittable_list.rs  interval.rs  lambertian.rs  lib.rs  main.rs  material.rs  metals.rs  ray.rs  sphere.rs
